2002-09-07 Araki Ken <arakiken@users.sf.net>

	* 2.6.0 released
	  (tag "rel-2_6_0")

2002-09-07 Araki Ken <arakiken@users.sf.net>

	* Added --with-imagelib=[imlib,gdk-pixbuf1,gdk-pixbuf2]
	  Removed --enable-imlib, --enable-gdk-pixbuf
	  (Thanks to Sato Seiichi san)
	* USPosition bit is set in XSizeHints.flags.
	  (Minami Hirokazu san)

2002-09-07  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* mlterm.tc is now non-shrinked version.
	  It's more accurate but may not compiled.
	  Please modify it to fit <1K .

2002-09-06  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Added mlterm.ti and  mlterm.tc under doc/term/ .

2002-09-06  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Mlterm's default behabior is changed as following
	 - mod_meta_mode is 8bit
	 - kD (sequence for DELETE) is \E[3~
	 - kb (sequence for BS) is ^?
	 - kh (sequence for HOME) is \EOH
	 - @7 (sequence for END) is \EOF

2002-09-05 Araki Ken <arakiken@users.sf.net>

	* Screen gets disordered when new line inserted. fixed.
	  (Thanks to Takahashi Tamotsu san, Sato Seiichi san)

2002-09-04 Araki Ken <arakiken@users.sf.net>

	* cursor moved to the end of line under insert mode. fixed.
	  (Thanks to Nobuyoshi Nakada san)
	
2002-09-04 Araki Ken <arakiken@users.sf.net>

	* String pointed by icon_path in x_term_manager.c is leaked. fixed.
	* doc/en/History is updated.

2002-09-04  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Added documentation of HOME/END support in README.ja and manpage.

2002-09-03 Seiichi SATO <ssato@sh.rim.or.jp>

	* The icons designed for various desktop environments / window managers,
	  such as GNOME, KDE, Window Maker, FVWM and twm, are added.
	  (contrib/icon/*.png)

2002-09-03 Araki Ken <arakiken@users.sf.net>

	* Even if imlib used, screen gets darker as gamma value greater like gdk-pixbuf.
	  (Thanks to Nobuyoshi Nakada san)
	* Documentation around OPEN_SCREEN,OPEN_PTY updated.

2002-09-03 Araki Ken <arakiken@users.sf.net>

	* ml_edit* module cleaned up.